--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -60,6 +60,12 @@
             <scope>test</scope>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
     </dependencies>
 
     <!-- ✅ BUILD -->
